# mcp-kettlelogic

./: .dockerignore  .gitignore  ARCHITECTURE.md  CODEOWNERS  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  server.json  server.py  test_e2e.py  test_server.py
.github/workflows/: ci.yml  publish-registry.yml
deploy/docker/: Dockerfile  docker-compose.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  service.yaml
scripts/: publish-registry.sh
src/mcp_kettlelogic/: config.py  constants.py  version.py
src/mcp_kettlelogic/application/: article_service.py  catalog_support.py  industry_service.py
src/mcp_kettlelogic/cli/: main.py
src/mcp_kettlelogic/domain/: enums.py  errors.py  models.py
src/mcp_kettlelogic/infrastructure/: cache.py  html_parsing.py  http_client.py  observability.py
src/mcp_kettlelogic/interfaces/: mcp_server.py  serializer.py
tests/: conftest.py
tests/e2e/: test_stdio_e2e.py
tests/ratchets/: _support.py  test_class_structure_ratchets.py  test_infra_hygiene_ratchets.py  test_layering_ratchets.py  test_python_quality_ratchets.py  test_tests_quality_ratchets.py
tests/unit/: test_article_service.py  test_cache.py  test_catalog_support.py  test_cli_main.py  test_config.py  test_html_parsing.py  test_http_client.py  test_industry_service.py  test_mcp_server.py  test_observability.py  test_serializer.py
