[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-kettlelogic"
version = "1.0.0"
description = "Model Context Protocol server exposing Kettle Logic site content (insights + industries) as live MCP resources and tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Matthew Loschiavo", email = "info@kettlelogic.com" }]
keywords = ["mcp", "model-context-protocol", "ai", "agents", "kettlelogic"]
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
]

[project.urls]
Homepage = "https://kettlelogic.com"
Repository = "https://github.com/mploschiavo/mcp-kettlelogic"

[project.scripts]
mcp-kettlelogic = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=server --cov-report=term-missing --cov-fail-under=90"
testpaths = ["test_server.py", "test_e2e.py"]

[tool.coverage.run]
source = ["server"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__."]
