[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mcp-kettlelogic"
description = "Model Context Protocol server exposing Kettle Logic site content (insights + industries) as live MCP resources and tools."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Matthew Loschiavo", email = "info@kettlelogic.com" }]
keywords = ["mcp", "model-context-protocol", "ai", "agents", "kettlelogic"]
dynamic = ["version"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://kettlelogic.com"
Repository = "https://github.com/mploschiavo/mcp-kettlelogic"
Issues = "https://github.com/mploschiavo/mcp-kettlelogic/issues"

[project.scripts]
# Entry point targets a classmethod — no module-level functions in the package.
mcp-kettlelogic = "mcp_kettlelogic.cli.main:ServerApplication.run_from_env"

[tool.hatch.version]
path = "src/mcp_kettlelogic/version.py"
pattern = 'VERSION: str = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_kettlelogic"]

# ---------------------------------------------------------------------------
# Lint / type / test
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["src"]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "--cov=mcp_kettlelogic --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["mcp_kettlelogic"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__ == .__main__."]
